--- a/inputs-assignment/index1.html
+++ b/inputs-assignment/index1.html
@@ -5,13 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inputs</title>
+    <title>Index1</title>
 </head>
 
 <body>
     <input type="text" id="txtContent" placeholder="Content">    
-    <input type="color" id="txtColor" placeholder="Color">
-    <input type="text" id="txtFontSize" placeholder="Type font size">
+    <input type="text" id="txtColor" placeholder="Color">
     <button onclick="showAlert()">Add</button>
 
 
@@ -21,14 +20,12 @@
         function showAlert() {
             let contentInput = document.getElementById('txtContent');
             let colorInput = document.getElementById('txtColor');
-            let fontSizeInput = document.getElementById('txtFontSize');
             let div = document.getElementById('container');
             div.innerHTML = contentInput.value;
             div.style.color = colorInput.value;
             div.style.fontSize = fontSizeInput.value;
         }
     </script>
-
 </body>
 
 </html>
